--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration page</title>
-    <link rel="stylesheet" href="./index.css">
+    <title>Registration Page</title>
 </head>
 <body>
-    <div class="container">
-        <form id="userForm">
-            <h2>Appointment Booking App</h2>
-            <input type="text" name="name" placeholder="name" id="name" />
-            <input type="email" name="email" placeholder="email" id="email" />
-            <button onclick="handleFormSubmit(event)" type="submit">Submit</button>
 
-         </form>
-         <div class="body">
-            <ul id="userList">
-                
-            </ul>
-         </div>
-    </div>
-    <script src="./index.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<h2>Register User</h2>
+<form id="userForm">
+    <label for="name">Name:</label>
+    <input type="text" id="name" required>
+
+    <label for="email">Email:</label>
+    <input type="email" id="email" required>
+
+    <button type="submit">Add User</button>
+</form>
+
+<h2>Users</h2>
+<ul id="userList"></ul>
+
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
